# Stale

./: CMakeLists.txt  README.md
Stale/: .gitignore  CMakeLists.txt  Stale.cpp  Stale.h
